--- a/examples/Stock_NeurIPS2018_call_func_rolling_window_SB3.ipynb
+++ b/examples/Stock_NeurIPS2018_call_func_rolling_window_SB3.ipynb
@@ -98,8 +98,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting swig\n",
@@ -668,7 +668,6 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "application/vnd.colab-display-data+json": {
               "pip_warning": {
@@ -693,7 +692,8 @@
               }
             }
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -731,8 +731,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.9/site-packages/pyfolio/pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
             "  warnings.warn(\n"
@@ -789,16 +789,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "RtUc_ofKmpdy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "RtUc_ofKmpdy",
         "outputId": "203fec48-d3fa-48fe-ec40-eda9a2799c48"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1;30;43m流式输出内容被截断，只能显示最后 5000 行内容。\u001b[0m\n",
             "|    std                  | 1.02        |\n",
@@ -5861,7 +5861,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.5 (default, Sep  4 2020, 02:22:02) \n[Clang 10.0.0 ]"
+      "version": "3.10.14"
     },
     "vscode": {
       "interpreter": {
